# sg

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
queries/rust/: fn.scm
scripts/: build_shared_libs.sh
src/: cli.rs  dynamic.rs  main.rs  report.rs  search.rs  tests.rs
src/search/: query.rs  word.rs
test_files/: issue_5_1.ml  issue_5_2.ml
test_files/simple/: simple.rs
