[package]
name = "sg"
description = "A syntax-aware grep-like code search tool"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/osa1/sg"

[dependencies]
ansi_term = "0.12"
clap = "2.33"
tree-sitter = "0.17"

[build-dependencies]
cc = "1.0"
rustc_tools_util = "0.2"
